[project]
name = "fontconfig-py"
version = "0.1.3"
description = "Python bindings to fontconfig"
authors = [
    {name = "Kota Yamaguchi", email = "yamaguchi_kota@cyberagent.co.jp"}
]
license = "MIT AND FTL"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = []

[build-system]
requires = ["setuptools", "cython", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fontconfig*"]

[project.optional-dependencies]
dev = [
	"pytest>=7.0",
	"ruff>=0.4"
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=3.0"
]