[project]
name = "fontconfig-py"
dynamic = ["version"]
description = "Python bindings to fontconfig"
authors = [
    {name = "Kota Yamaguchi", email = "yamaguchi_kota@cyberagent.co.jp"}
]
license = "MIT AND FTL"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[build-system]
requires = ["setuptools>=61.0", "cython>=3.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fontconfig*"]

[tool.setuptools.dynamic]
version = {attr = "fontconfig.__version__"}

[tool.setuptools.package-data]
fontconfig = ["py.typed", "*.pyi"]

[dependency-groups]
dev = [
	"pytest>=8.0",
	"ruff>=0.4",
    "mypy>=1.18.2",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=3.0"
]
