[project]
name = "fontconfig-py"
dynamic = ["version"]
description = "Python bindings to fontconfig"
authors = [
    {name = "CyberAgent, Inc.", email = "yamaguchi_kota@cyberagent.co.jp"}
]
license = "MIT AND FTL"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []
keywords = ["fontconfig", "fonts", "typography", "freetype", "font-matching"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Fonts",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Cython",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/kyamagu/fontconfig-py"
Documentation = "https://fontconfig-py.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0", "cython>=3.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fontconfig*"]

[tool.setuptools.dynamic]
version = {attr = "fontconfig.__version__"}

[tool.setuptools.package-data]
fontconfig = ["py.typed", "*.pyi"]

[dependency-groups]
dev = [
	"pytest>=8.0",
	"ruff>=0.4",
    "mypy>=1.18.2",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=3.0"
]
